# numerical-benchmarks

./: CMakeLists.txt  README.md  ghost.ps1
.github/workflows/: ci.yml  main.yml  mainvvgfdd.yml
include/numerical/: matrix_ops.hpp
src/: matrix_ops.cpp
tests/: benchmark_main.cpp  benchmarks_main.cpp
